Adjust font sizes and prevent overflow in code blocks

--- a/app/css/laptop.css
+++ b/app/css/laptop.css
@@ -17,6 +17,6 @@ article .post {
 }
 
 pre {
-  font-size: 1.1rem;
-  line-height: calc(1.1rem * 1.2);
+  font-size: 0.95rem;
+  line-height: calc(0.95rem * 1.2);
 }
