--- a/app/css/phone-landscape.css
+++ b/app/css/phone-landscape.css
@@ -27,6 +27,6 @@ article .post {
 }
 
 pre {
-  font-size: 0.95rem;
-  line-height: calc(0.95rem * 1.2);
+  font-size: 0.85rem;
+  line-height: calc(0.85rem * 1.2);
 }
