--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -116,11 +116,12 @@ pre {
   white-space: pre-wrap;
   background: #eee;
   padding: 1rem;
-  font-size: 1.1rem;
-  line-height: calc(1.1rem * 1.2);
+  font-size: 1rem;
+  line-height: calc(1rem * 1.2);
   color: #555;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   margin-bottom: 1.5rem;
+  overflow-wrap: break-word;
 }
 
 article .post .author {
