--- a/app/css/tablet.css
+++ b/app/css/tablet.css
@@ -9,6 +9,6 @@ article .post {
 }
 
 pre {
-  font-size: 1.05rem;
-  line-height: calc(1.05rem * 1.2);
+  font-size: 0.9rem;
+  line-height: calc(0.9rem * 1.2);
 }
